--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -6,7 +6,7 @@
 
 body{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    background-color: #ebf5fc;
+    background-color: #7ec2f3;
     /* overflow-x: hidden; */
     width: 100vw;
 }
